--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3308
+DB_HOST=db4free.net
+DB_PORT=3306
 DB_DATABASE=iterview
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=MehdiBenka1998
+DB_PASSWORD=MehdiBenka1998
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
