configure .env file 2

--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ DB_CONNECTION=mysql
 DB_HOST=db4free.net
 DB_PORT=3306
 DB_DATABASE=iterview
-DB_USERNAME=MehdiBenka1998
+DB_USERNAME=iterview
 DB_PASSWORD=MehdiBenka1998
 
 BROADCAST_DRIVER=log
