fix gitignore & merge

--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:CceGDTLkEZ6WC5KYjArZtoU98Sayj8kLZZ+e8banj/4=
+APP_KEY=base64:abvg3kRn9TUJsLnw7UyL5ly+amwc7EZURC2AdLmZybg=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=db4free.net
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=iterview
-DB_USERNAME=iterview
-DB_PASSWORD=MehdiBenka1998
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
